# dico

./: .gitignore  2.html  AUTHORS  ChangeLog  ChangeLog.2008  Makefile.am  Makefile.in  NEWS  README  THANKS  TODO  aclocal.m4  config.h.in  configure  configure.ac  gray.css  test.sh  words.lst
am/: gsasl.m4  lib.m4  testdir.m4
build-aux/: ltmain.sh
dico/: Makefile.am  Makefile.in  autologin.c  cmdline.c  cmdline.opt  connect.c  dico-priv.h  dico.c  func.c  lookup.c  pager.c  saslauth.c  shell.c
dicod/: Makefile.am  Makefile.in  accesslog.c  acl.c  alias.c  auth.c  capa.c  ckpass.c  cmdline.c  cmdline.opt  commands.c  dbtext.c  dicod.c  dicod.h  gsasl.c  ident.c  lang.c  lev.c  lint.c  loader.c  main.c  markup.c  mime.c  ostream.c  regex.c  server.c  stat.c  stratcl.c  xidle.c  xversion.c
dicod/tests/: Makefile.am  Makefile.in  alias.at  apop.at  apopauth.c  atlocal.in  def.at  descr.at  echo.c  group  help00.at  help01.at  help02.at  help03.at  info.at  match.at  nodef.at  nomatch.at  passwd  showdb.at  showstrat.at  startup.at  testsuite  testsuite.at  vis00.at  vis01.at  vis02.at
dicoweb/: INSTALL  dicoweb.wsgi  dummy_translations.py  manage.py  settings-sample.py  urls.py  views.py
doc/: Makefile.am  Makefile.in  dico.info  dico.info-1  dico.info-2  dico.texi  gendocs_template  libdico.texi  macros.texi  proto.texi  strat.texi  strftime.texi  version.texi
examples/: Makefile.am  Makefile.in  devdict.out  glossary.scm  listdict.scm  numerals-cz.txt  numerals-pl.ldb  textdict.py
gint/: Makefile.in
gnu/: Makefile.am  Makefile.in  des.c  des.h  (+14 more)
grecs/: AUTHORS  Makefile.am  Makefile.in  NEWS  README  gitid.h
grecs/am/: grecs.m4
grecs/build-aux/: getopt.m4  git2chg.awk  yyrename
grecs/src/: Make-inst.am  Make-shared.am  Make-shared.in  Make-static.am  Make.am  asprintf.c  bind-gram.c  bind-gram.y  bind-lex.c  bind-lex.l  diag.c  format.c  git-parser.c  grecs-gram.c  grecs-gram.h  grecs-gram.y  grecs-lex.c  grecs-lex.l  grecs-locus.h  grecs.h  join.c  lineacc.c  list.c  lookup.c  mem.c  meta1-gram.c  meta1-gram.y  meta1-lex.c  meta1-lex.l  parser.c  parsertab.c  path-parser.c  pp-setup  preproc.c  sort.c  symtab.c  text.c  tree.c  txtacc.c  version.c  (+2 more)
grecs/tests/: Makefile.am  Makefile.in  atlocal.in  bind.conf  bind.dlz  bind.ext.conf  bind.int.conf  bind.keys  bind00.at  cfhelp.at  distck.c  empty.at  enum.at  format00.at  format01.at  format02.at  gcf1.conf  gcfenum.c  gcffmt.c  gcfpeek.c  gcfset.c  gcfver.c  git.conf  glob00.at  glob01.at  glob02.at  glob03.at  grecs00.at  join.at  locus-bind.at  locus-git.at  locus-meta1.at  locus00.at  locus01.at  locus02.at  meta1.conf  package.m4  parser-bind.at  parser-git.at  parser-meta1.at  (+12 more)
lib/: Makefile.am  Makefile.in  appi18n.c  argcv.c  assoc.c  base64.c  bushu.h  crlfstr.c  cursor.xbm  dbgstream.c  diag.c  fdiostr.c  fdstream.c  fltstream.c  gsaslstr.c  header.c  iostr.c  iputil.c  jiscvt.c  key.c  levenshtein.c  libi18n.c  linetrimstr.c  list.c  logstream.c  mapstream.c  markup.c  parseopt.c  qp.c  soundex.c  strat.c  stream.c  timer.c  tokenize.c  udb.c  url.c  userprivs.c  utf8.c  util.c  xalloc-die.c  (+6 more)
lib/tests/: Makefile.am  Makefile.in  atlocal.in  crlf00.at  crlf01.at  crlf02.at  crlf03.at  crlf04.at  crlf05.at  crlftool.c  dlev00.at  dlev01.at  itrsh.c  itrsh.h  lev00.at  lev01.at  levtest.c  linetrim.c  list.at  listop.c  lntrim00.at  lntrim01.at  lntrim02.at  lntrim03.at  strcasecmp.at  strlen.at  strncasecmp.at  testsuite  testsuite.at  tolower.at  toupper.at  utf8.c  wcstrcasecmp.at  wcstrchr.at  wcstrcmp.at  wcstrncasecmp.at  wcstrncmp.at  wcstrstr.at
modules/: Makefile.am  Makefile.in  template.c  template.py  template.scm
modules/dict.org/: Makefile.am  Makefile.in  crc.c  crc.h  data.c  dictorg.c  dictorg.h  dictstr.c
modules/gcide/: Makefile.am  Makefile.in  ent.c  gcide.c  gcide.h  grk.c  idx.c  idxgcide-cli.h  idxgcide-cli.opt  idxgcide.c  idxgcide.l  markup.c  markup.l  webchr.c
modules/gcide/tests/: Makefile.am  Makefile.in  all.at  atlocal.in  autoidx.at  def00.at  def01.at  def02.at  def03.at  def04.at  def05.at  degcide.c  descr.at  dicod.cfin  exact.at  exgrk.c  greek.at  greek.c  idx.at  info.at  markup.at  nopr.at  prefix.at  testsuite  testsuite.at
modules/gcide/tests/dict/: CIDE.B  CIDE.C  CIDE.D  CIDE.E  CIDE.F  CIDE.G  CIDE.H  CIDE.I  CIDE.J  CIDE.K  CIDE.L  CIDE.M  CIDE.N  CIDE.P  CIDE.Q  CIDE.R  CIDE.S  CIDE.T  CIDE.U  CIDE.V  CIDE.W  CIDE.X  CIDE.Y  CIDE.Z  INFO
modules/guile/: Makefile.am  Makefile.in  guile.c  guile.x
modules/guile/tests/: Makefile.am  Makefile.in  define.at  dicod.cfin  exact.at  lev.at  prefix.at  showdb.at  showinfo.at  showlang.at  suffix.at  testsuite  testsuite.at
modules/ldap/: Makefile.am  Makefile.in  ldap.c
modules/nprefix/: Makefile.am  Makefile.in  nprefix.c
modules/nprefix/tests/: Makefile.am  Makefile.in  atlocal.in  dicod.cfin  dict.out  np00.at  np01.at  np02.at  np03.at  np04.at  package.m4  testsuite  testsuite.at
modules/outline/: Makefile.am  Makefile.in  outline.c
modules/outline/tests/: Makefile.am  Makefile.in  define.at  dicod.cfin  dlev.at  dnlev.at  exact.at  lev.at  nlev.at  prefix.at  re.at  regexp.at  showdb.at  showinfo.at  showlang.at  soundex.at  suffix.at  testsuite  testsuite.at
modules/pam/: Makefile.am  Makefile.in  pam.c
modules/pcre/: Makefile.am  Makefile.in  pcre.c
modules/python/: Makefile.am  Makefile.in  python.c
modules/python/tests/: Makefile.am  Makefile.in  atlocal.in  define.at  dicod.cfin  exact.at  lev.at  prefix.at  showdb.at  showinfo.at  showlang.at  testsuite  testsuite.at
modules/stratall/: Makefile.am  Makefile.in  stratall.c
modules/stratall/tests/: Makefile.am  Makefile.in  dicod.cfin  testsuite  testsuite.at
modules/substr/: Makefile.am  Makefile.in  substr.c
modules/substr/tests/: Makefile.in  dicod.cfin  testsuite  testsuite.at
modules/word/: Makefile.am  Makefile.in  word.c
modules/word/tests/: Makefile.am  Makefile.in  dicod.cfin  dict.out  first.at  last.at  testsuite  testsuite.at  word.at
modules/wordnet/: Makefile.am  Makefile.in  wordnet.c
(+99 files in other folders)
